parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> root
Rule 1     root -> expression
Rule 2     root -> statements
Rule 3     root -> empty
Rule 4     statements -> statements statement SEMICOLON
Rule 5     statements -> statement SEMICOLON
Rule 6     statements -> statements if
Rule 7     statements -> if
Rule 8     if -> IF LPAREN expression RPAREN LCURLY statements RCURLY elseif else
Rule 9     elseif -> ELSEIF LPAREN expression RPAREN LCURLY statements RCURLY elseif else
Rule 10    elseif -> empty
Rule 11    else -> ELSE LCURLY statements RCURLY
Rule 12    else -> empty
Rule 13    statement -> WORD DOT WORD EQUALS expression
Rule 14    statement -> PRINT LPAREN print_list RPAREN
Rule 15    print_list -> print_list DELIM expression
Rule 16    print_list -> expression
Rule 17    statement -> WORD WORD
Rule 18    statement -> STRUCT WORD LCURLY var_decls RCURLY
Rule 19    var_decls -> var_decls var_declare
Rule 20    var_decls -> var_declare
Rule 21    statement -> var_declare
Rule 22    statement -> var_assign
Rule 23    expression -> LPAREN expression RPAREN
Rule 24    var_assign -> var_declare EQUALS expression
Rule 25    var_assign -> WORD EQUALS expression
Rule 26    var_declare -> INTNAME WORD
Rule 27    var_declare -> DOUBLENAME WORD
Rule 28    var_declare -> CHARNAME WORD
Rule 29    var_declare -> STRINGNAME WORD
Rule 30    var_declare -> BOOLNAME WORD
Rule 31    expression -> expression MULTIPLY expression
Rule 32    expression -> expression DIVIDE expression
Rule 33    expression -> expression PLUS expression
Rule 34    expression -> expression MINUS expression
Rule 35    expression -> expression EXPONENT expression
Rule 36    expression -> expression MODULUS expression
Rule 37    expression -> expression AND expression
Rule 38    expression -> expression OR expression
Rule 39    expression -> expression EQ expression
Rule 40    expression -> expression NE expression
Rule 41    expression -> expression LTE expression
Rule 42    expression -> expression GTE expression
Rule 43    expression -> expression GT expression
Rule 44    expression -> expression LT expression
Rule 45    expression -> PLUS expression
Rule 46    expression -> MINUS expression
Rule 47    statement -> expression INC
Rule 48    statement -> expression DEC
Rule 49    expression -> NOT expression
Rule 50    expression -> WORD
Rule 51    expression -> INT
Rule 52    expression -> DOUBLE
Rule 53    expression -> CHAR
Rule 54    expression -> STRING
Rule 55    expression -> BOOL
Rule 56    expression -> WORD DOT WORD
Rule 57    empty -> <empty>

Terminals, with rules where they appear

AND                  : 37
BOOL                 : 55
BOOLNAME             : 30
CHAR                 : 53
CHARNAME             : 28
DEC                  : 48
DELIM                : 15
DIVIDE               : 32
DOT                  : 13 56
DOUBLE               : 52
DOUBLENAME           : 27
ELSE                 : 11
ELSEIF               : 9
EQ                   : 39
EQUALS               : 13 24 25
EXPONENT             : 35
GT                   : 43
GTE                  : 42
IF                   : 8
INC                  : 47
INT                  : 51
INTNAME              : 26
LCURLY               : 8 9 11 18
LPAREN               : 8 9 14 23
LT                   : 44
LTE                  : 41
MINUS                : 34 46
MODULUS              : 36
MULTIPLY             : 31
NE                   : 40
NOT                  : 49
OR                   : 38
PLUS                 : 33 45
PRINT                : 14
RCURLY               : 8 9 11 18
RPAREN               : 8 9 14 23
SEMICOLON            : 4 5
STRING               : 54
STRINGNAME           : 29
STRUCT               : 18
WORD                 : 13 13 17 17 18 25 26 27 28 29 30 50 56 56
error                : 

Nonterminals, with rules where they appear

else                 : 8 9
elseif               : 8 9
empty                : 3 10 12
expression           : 1 8 9 13 15 16 23 24 25 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 46 47 48 49
if                   : 6 7
print_list           : 14 15
root                 : 0
statement            : 4 5
statements           : 2 4 6 8 9 11
var_assign           : 22
var_declare          : 19 20 21 24
var_decls            : 18 19

Parsing method: LALR

state 0

    (0) S' -> . root
    (1) root -> . expression
    (2) root -> . statements
    (3) root -> . empty
    (23) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression MULTIPLY expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression EXPONENT expression
    (36) expression -> . expression MODULUS expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . expression EQ expression
    (40) expression -> . expression NE expression
    (41) expression -> . expression LTE expression
    (42) expression -> . expression GTE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression LT expression
    (45) expression -> . PLUS expression
    (46) expression -> . MINUS expression
    (49) expression -> . NOT expression
    (50) expression -> . WORD
    (51) expression -> . INT
    (52) expression -> . DOUBLE
    (53) expression -> . CHAR
    (54) expression -> . STRING
    (55) expression -> . BOOL
    (56) expression -> . WORD DOT WORD
    (4) statements -> . statements statement SEMICOLON
    (5) statements -> . statement SEMICOLON
    (6) statements -> . statements if
    (7) statements -> . if
    (57) empty -> .
    (13) statement -> . WORD DOT WORD EQUALS expression
    (14) statement -> . PRINT LPAREN print_list RPAREN
    (17) statement -> . WORD WORD
    (18) statement -> . STRUCT WORD LCURLY var_decls RCURLY
    (21) statement -> . var_declare
    (22) statement -> . var_assign
    (47) statement -> . expression INC
    (48) statement -> . expression DEC
    (8) if -> . IF LPAREN expression RPAREN LCURLY statements RCURLY elseif else
    (26) var_declare -> . INTNAME WORD
    (27) var_declare -> . DOUBLENAME WORD
    (28) var_declare -> . CHARNAME WORD
    (29) var_declare -> . STRINGNAME WORD
    (30) var_declare -> . BOOLNAME WORD
    (24) var_assign -> . var_declare EQUALS expression
    (25) var_assign -> . WORD EQUALS expression

    LPAREN          shift and go to state 5
    PLUS            shift and go to state 6
    MINUS           shift and go to state 7
    NOT             shift and go to state 8
    WORD            shift and go to state 9
    INT             shift and go to state 10
    DOUBLE          shift and go to state 11
    CHAR            shift and go to state 12
    STRING          shift and go to state 13
    BOOL            shift and go to state 14
    $end            reduce using rule 57 (empty -> .)
    PRINT           shift and go to state 17
    STRUCT          shift and go to state 18
    IF              shift and go to state 21
    INTNAME         shift and go to state 22
    DOUBLENAME      shift and go to state 23
    CHARNAME        shift and go to state 24
    STRINGNAME      shift and go to state 25
    BOOLNAME        shift and go to state 26

    root                           shift and go to state 1
    expression                     shift and go to state 2
    statements                     shift and go to state 3
    empty                          shift and go to state 4
    statement                      shift and go to state 15
    if                             shift and go to state 16
    var_declare                    shift and go to state 19
    var_assign                     shift and go to state 20

state 1

    (0) S' -> root .



state 2

    (1) root -> expression .
    (31) expression -> expression . MULTIPLY expression
    (32) expression -> expression . DIVIDE expression
    (33) expression -> expression . PLUS expression
    (34) expression -> expression . MINUS expression
    (35) expression -> expression . EXPONENT expression
    (36) expression -> expression . MODULUS expression
    (37) expression -> expression . AND expression
    (38) expression -> expression . OR expression
    (39) expression -> expression . EQ expression
    (40) expression -> expression . NE expression
    (41) expression -> expression . LTE expression
    (42) expression -> expression . GTE expression
    (43) expression -> expression . GT expression
    (44) expression -> expression . LT expression
    (47) statement -> expression . INC
    (48) statement -> expression . DEC

    $end            reduce using rule 1 (root -> expression .)
    MULTIPLY        shift and go to state 27
    DIVIDE          shift and go to state 28
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    EXPONENT        shift and go to state 31
    MODULUS         shift and go to state 32
    AND             shift and go to state 33
    OR              shift and go to state 34
    EQ              shift and go to state 35
    NE              shift and go to state 36
    LTE             shift and go to state 37
    GTE             shift and go to state 38
    GT              shift and go to state 39
    LT              shift and go to state 40
    INC             shift and go to state 41
    DEC             shift and go to state 42


state 3

    (2) root -> statements .
    (4) statements -> statements . statement SEMICOLON
    (6) statements -> statements . if
    (13) statement -> . WORD DOT WORD EQUALS expression
    (14) statement -> . PRINT LPAREN print_list RPAREN
    (17) statement -> . WORD WORD
    (18) statement -> . STRUCT WORD LCURLY var_decls RCURLY
    (21) statement -> . var_declare
    (22) statement -> . var_assign
    (47) statement -> . expression INC
    (48) statement -> . expression DEC
    (8) if -> . IF LPAREN expression RPAREN LCURLY statements RCURLY elseif else
    (26) var_declare -> . INTNAME WORD
    (27) var_declare -> . DOUBLENAME WORD
    (28) var_declare -> . CHARNAME WORD
    (29) var_declare -> . STRINGNAME WORD
    (30) var_declare -> . BOOLNAME WORD
    (24) var_assign -> . var_declare EQUALS expression
    (25) var_assign -> . WORD EQUALS expression
    (23) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression MULTIPLY expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression EXPONENT expression
    (36) expression -> . expression MODULUS expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . expression EQ expression
    (40) expression -> . expression NE expression
    (41) expression -> . expression LTE expression
    (42) expression -> . expression GTE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression LT expression
    (45) expression -> . PLUS expression
    (46) expression -> . MINUS expression
    (49) expression -> . NOT expression
    (50) expression -> . WORD
    (51) expression -> . INT
    (52) expression -> . DOUBLE
    (53) expression -> . CHAR
    (54) expression -> . STRING
    (55) expression -> . BOOL
    (56) expression -> . WORD DOT WORD

    $end            reduce using rule 2 (root -> statements .)
    WORD            shift and go to state 45
    PRINT           shift and go to state 17
    STRUCT          shift and go to state 18
    IF              shift and go to state 21
    INTNAME         shift and go to state 22
    DOUBLENAME      shift and go to state 23
    CHARNAME        shift and go to state 24
    STRINGNAME      shift and go to state 25
    BOOLNAME        shift and go to state 26
    LPAREN          shift and go to state 5
    PLUS            shift and go to state 6
    MINUS           shift and go to state 7
    NOT             shift and go to state 8
    INT             shift and go to state 10
    DOUBLE          shift and go to state 11
    CHAR            shift and go to state 12
    STRING          shift and go to state 13
    BOOL            shift and go to state 14

    statement                      shift and go to state 43
    if                             shift and go to state 44
    expression                     shift and go to state 46
    var_declare                    shift and go to state 19
    var_assign                     shift and go to state 20

state 4

    (3) root -> empty .

    $end            reduce using rule 3 (root -> empty .)


state 5

    (23) expression -> LPAREN . expression RPAREN
    (23) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression MULTIPLY expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression EXPONENT expression
    (36) expression -> . expression MODULUS expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . expression EQ expression
    (40) expression -> . expression NE expression
    (41) expression -> . expression LTE expression
    (42) expression -> . expression GTE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression LT expression
    (45) expression -> . PLUS expression
    (46) expression -> . MINUS expression
    (49) expression -> . NOT expression
    (50) expression -> . WORD
    (51) expression -> . INT
    (52) expression -> . DOUBLE
    (53) expression -> . CHAR
    (54) expression -> . STRING
    (55) expression -> . BOOL
    (56) expression -> . WORD DOT WORD

    LPAREN          shift and go to state 5
    PLUS            shift and go to state 6
    MINUS           shift and go to state 7
    NOT             shift and go to state 8
    WORD            shift and go to state 48
    INT             shift and go to state 10
    DOUBLE          shift and go to state 11
    CHAR            shift and go to state 12
    STRING          shift and go to state 13
    BOOL            shift and go to state 14

    expression                     shift and go to state 47

state 6

    (45) expression -> PLUS . expression
    (23) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression MULTIPLY expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression EXPONENT expression
    (36) expression -> . expression MODULUS expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . expression EQ expression
    (40) expression -> . expression NE expression
    (41) expression -> . expression LTE expression
    (42) expression -> . expression GTE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression LT expression
    (45) expression -> . PLUS expression
    (46) expression -> . MINUS expression
    (49) expression -> . NOT expression
    (50) expression -> . WORD
    (51) expression -> . INT
    (52) expression -> . DOUBLE
    (53) expression -> . CHAR
    (54) expression -> . STRING
    (55) expression -> . BOOL
    (56) expression -> . WORD DOT WORD

    LPAREN          shift and go to state 5
    PLUS            shift and go to state 6
    MINUS           shift and go to state 7
    NOT             shift and go to state 8
    WORD            shift and go to state 48
    INT             shift and go to state 10
    DOUBLE          shift and go to state 11
    CHAR            shift and go to state 12
    STRING          shift and go to state 13
    BOOL            shift and go to state 14

    expression                     shift and go to state 49

state 7

    (46) expression -> MINUS . expression
    (23) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression MULTIPLY expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression EXPONENT expression
    (36) expression -> . expression MODULUS expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . expression EQ expression
    (40) expression -> . expression NE expression
    (41) expression -> . expression LTE expression
    (42) expression -> . expression GTE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression LT expression
    (45) expression -> . PLUS expression
    (46) expression -> . MINUS expression
    (49) expression -> . NOT expression
    (50) expression -> . WORD
    (51) expression -> . INT
    (52) expression -> . DOUBLE
    (53) expression -> . CHAR
    (54) expression -> . STRING
    (55) expression -> . BOOL
    (56) expression -> . WORD DOT WORD

    LPAREN          shift and go to state 5
    PLUS            shift and go to state 6
    MINUS           shift and go to state 7
    NOT             shift and go to state 8
    WORD            shift and go to state 48
    INT             shift and go to state 10
    DOUBLE          shift and go to state 11
    CHAR            shift and go to state 12
    STRING          shift and go to state 13
    BOOL            shift and go to state 14

    expression                     shift and go to state 50

state 8

    (49) expression -> NOT . expression
    (23) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression MULTIPLY expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression EXPONENT expression
    (36) expression -> . expression MODULUS expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . expression EQ expression
    (40) expression -> . expression NE expression
    (41) expression -> . expression LTE expression
    (42) expression -> . expression GTE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression LT expression
    (45) expression -> . PLUS expression
    (46) expression -> . MINUS expression
    (49) expression -> . NOT expression
    (50) expression -> . WORD
    (51) expression -> . INT
    (52) expression -> . DOUBLE
    (53) expression -> . CHAR
    (54) expression -> . STRING
    (55) expression -> . BOOL
    (56) expression -> . WORD DOT WORD

    LPAREN          shift and go to state 5
    PLUS            shift and go to state 6
    MINUS           shift and go to state 7
    NOT             shift and go to state 8
    WORD            shift and go to state 48
    INT             shift and go to state 10
    DOUBLE          shift and go to state 11
    CHAR            shift and go to state 12
    STRING          shift and go to state 13
    BOOL            shift and go to state 14

    expression                     shift and go to state 51

state 9

    (50) expression -> WORD .
    (56) expression -> WORD . DOT WORD
    (13) statement -> WORD . DOT WORD EQUALS expression
    (17) statement -> WORD . WORD
    (25) var_assign -> WORD . EQUALS expression

    MULTIPLY        reduce using rule 50 (expression -> WORD .)
    DIVIDE          reduce using rule 50 (expression -> WORD .)
    PLUS            reduce using rule 50 (expression -> WORD .)
    MINUS           reduce using rule 50 (expression -> WORD .)
    EXPONENT        reduce using rule 50 (expression -> WORD .)
    MODULUS         reduce using rule 50 (expression -> WORD .)
    AND             reduce using rule 50 (expression -> WORD .)
    OR              reduce using rule 50 (expression -> WORD .)
    EQ              reduce using rule 50 (expression -> WORD .)
    NE              reduce using rule 50 (expression -> WORD .)
    LTE             reduce using rule 50 (expression -> WORD .)
    GTE             reduce using rule 50 (expression -> WORD .)
    GT              reduce using rule 50 (expression -> WORD .)
    LT              reduce using rule 50 (expression -> WORD .)
    INC             reduce using rule 50 (expression -> WORD .)
    DEC             reduce using rule 50 (expression -> WORD .)
    $end            reduce using rule 50 (expression -> WORD .)
    DOT             shift and go to state 53
    WORD            shift and go to state 52
    EQUALS          shift and go to state 54


state 10

    (51) expression -> INT .

    MULTIPLY        reduce using rule 51 (expression -> INT .)
    DIVIDE          reduce using rule 51 (expression -> INT .)
    PLUS            reduce using rule 51 (expression -> INT .)
    MINUS           reduce using rule 51 (expression -> INT .)
    EXPONENT        reduce using rule 51 (expression -> INT .)
    MODULUS         reduce using rule 51 (expression -> INT .)
    AND             reduce using rule 51 (expression -> INT .)
    OR              reduce using rule 51 (expression -> INT .)
    EQ              reduce using rule 51 (expression -> INT .)
    NE              reduce using rule 51 (expression -> INT .)
    LTE             reduce using rule 51 (expression -> INT .)
    GTE             reduce using rule 51 (expression -> INT .)
    GT              reduce using rule 51 (expression -> INT .)
    LT              reduce using rule 51 (expression -> INT .)
    INC             reduce using rule 51 (expression -> INT .)
    DEC             reduce using rule 51 (expression -> INT .)
    $end            reduce using rule 51 (expression -> INT .)
    RPAREN          reduce using rule 51 (expression -> INT .)
    SEMICOLON       reduce using rule 51 (expression -> INT .)
    DELIM           reduce using rule 51 (expression -> INT .)


state 11

    (52) expression -> DOUBLE .

    MULTIPLY        reduce using rule 52 (expression -> DOUBLE .)
    DIVIDE          reduce using rule 52 (expression -> DOUBLE .)
    PLUS            reduce using rule 52 (expression -> DOUBLE .)
    MINUS           reduce using rule 52 (expression -> DOUBLE .)
    EXPONENT        reduce using rule 52 (expression -> DOUBLE .)
    MODULUS         reduce using rule 52 (expression -> DOUBLE .)
    AND             reduce using rule 52 (expression -> DOUBLE .)
    OR              reduce using rule 52 (expression -> DOUBLE .)
    EQ              reduce using rule 52 (expression -> DOUBLE .)
    NE              reduce using rule 52 (expression -> DOUBLE .)
    LTE             reduce using rule 52 (expression -> DOUBLE .)
    GTE             reduce using rule 52 (expression -> DOUBLE .)
    GT              reduce using rule 52 (expression -> DOUBLE .)
    LT              reduce using rule 52 (expression -> DOUBLE .)
    INC             reduce using rule 52 (expression -> DOUBLE .)
    DEC             reduce using rule 52 (expression -> DOUBLE .)
    $end            reduce using rule 52 (expression -> DOUBLE .)
    RPAREN          reduce using rule 52 (expression -> DOUBLE .)
    SEMICOLON       reduce using rule 52 (expression -> DOUBLE .)
    DELIM           reduce using rule 52 (expression -> DOUBLE .)


state 12

    (53) expression -> CHAR .

    MULTIPLY        reduce using rule 53 (expression -> CHAR .)
    DIVIDE          reduce using rule 53 (expression -> CHAR .)
    PLUS            reduce using rule 53 (expression -> CHAR .)
    MINUS           reduce using rule 53 (expression -> CHAR .)
    EXPONENT        reduce using rule 53 (expression -> CHAR .)
    MODULUS         reduce using rule 53 (expression -> CHAR .)
    AND             reduce using rule 53 (expression -> CHAR .)
    OR              reduce using rule 53 (expression -> CHAR .)
    EQ              reduce using rule 53 (expression -> CHAR .)
    NE              reduce using rule 53 (expression -> CHAR .)
    LTE             reduce using rule 53 (expression -> CHAR .)
    GTE             reduce using rule 53 (expression -> CHAR .)
    GT              reduce using rule 53 (expression -> CHAR .)
    LT              reduce using rule 53 (expression -> CHAR .)
    INC             reduce using rule 53 (expression -> CHAR .)
    DEC             reduce using rule 53 (expression -> CHAR .)
    $end            reduce using rule 53 (expression -> CHAR .)
    RPAREN          reduce using rule 53 (expression -> CHAR .)
    SEMICOLON       reduce using rule 53 (expression -> CHAR .)
    DELIM           reduce using rule 53 (expression -> CHAR .)


state 13

    (54) expression -> STRING .

    MULTIPLY        reduce using rule 54 (expression -> STRING .)
    DIVIDE          reduce using rule 54 (expression -> STRING .)
    PLUS            reduce using rule 54 (expression -> STRING .)
    MINUS           reduce using rule 54 (expression -> STRING .)
    EXPONENT        reduce using rule 54 (expression -> STRING .)
    MODULUS         reduce using rule 54 (expression -> STRING .)
    AND             reduce using rule 54 (expression -> STRING .)
    OR              reduce using rule 54 (expression -> STRING .)
    EQ              reduce using rule 54 (expression -> STRING .)
    NE              reduce using rule 54 (expression -> STRING .)
    LTE             reduce using rule 54 (expression -> STRING .)
    GTE             reduce using rule 54 (expression -> STRING .)
    GT              reduce using rule 54 (expression -> STRING .)
    LT              reduce using rule 54 (expression -> STRING .)
    INC             reduce using rule 54 (expression -> STRING .)
    DEC             reduce using rule 54 (expression -> STRING .)
    $end            reduce using rule 54 (expression -> STRING .)
    RPAREN          reduce using rule 54 (expression -> STRING .)
    SEMICOLON       reduce using rule 54 (expression -> STRING .)
    DELIM           reduce using rule 54 (expression -> STRING .)


state 14

    (55) expression -> BOOL .

    MULTIPLY        reduce using rule 55 (expression -> BOOL .)
    DIVIDE          reduce using rule 55 (expression -> BOOL .)
    PLUS            reduce using rule 55 (expression -> BOOL .)
    MINUS           reduce using rule 55 (expression -> BOOL .)
    EXPONENT        reduce using rule 55 (expression -> BOOL .)
    MODULUS         reduce using rule 55 (expression -> BOOL .)
    AND             reduce using rule 55 (expression -> BOOL .)
    OR              reduce using rule 55 (expression -> BOOL .)
    EQ              reduce using rule 55 (expression -> BOOL .)
    NE              reduce using rule 55 (expression -> BOOL .)
    LTE             reduce using rule 55 (expression -> BOOL .)
    GTE             reduce using rule 55 (expression -> BOOL .)
    GT              reduce using rule 55 (expression -> BOOL .)
    LT              reduce using rule 55 (expression -> BOOL .)
    INC             reduce using rule 55 (expression -> BOOL .)
    DEC             reduce using rule 55 (expression -> BOOL .)
    $end            reduce using rule 55 (expression -> BOOL .)
    RPAREN          reduce using rule 55 (expression -> BOOL .)
    SEMICOLON       reduce using rule 55 (expression -> BOOL .)
    DELIM           reduce using rule 55 (expression -> BOOL .)


state 15

    (5) statements -> statement . SEMICOLON

    SEMICOLON       shift and go to state 55


state 16

    (7) statements -> if .

    WORD            reduce using rule 7 (statements -> if .)
    PRINT           reduce using rule 7 (statements -> if .)
    STRUCT          reduce using rule 7 (statements -> if .)
    IF              reduce using rule 7 (statements -> if .)
    INTNAME         reduce using rule 7 (statements -> if .)
    DOUBLENAME      reduce using rule 7 (statements -> if .)
    CHARNAME        reduce using rule 7 (statements -> if .)
    STRINGNAME      reduce using rule 7 (statements -> if .)
    BOOLNAME        reduce using rule 7 (statements -> if .)
    LPAREN          reduce using rule 7 (statements -> if .)
    PLUS            reduce using rule 7 (statements -> if .)
    MINUS           reduce using rule 7 (statements -> if .)
    NOT             reduce using rule 7 (statements -> if .)
    INT             reduce using rule 7 (statements -> if .)
    DOUBLE          reduce using rule 7 (statements -> if .)
    CHAR            reduce using rule 7 (statements -> if .)
    STRING          reduce using rule 7 (statements -> if .)
    BOOL            reduce using rule 7 (statements -> if .)
    $end            reduce using rule 7 (statements -> if .)
    RCURLY          reduce using rule 7 (statements -> if .)


state 17

    (14) statement -> PRINT . LPAREN print_list RPAREN

    LPAREN          shift and go to state 56


state 18

    (18) statement -> STRUCT . WORD LCURLY var_decls RCURLY

    WORD            shift and go to state 57


state 19

    (21) statement -> var_declare .
    (24) var_assign -> var_declare . EQUALS expression

    SEMICOLON       reduce using rule 21 (statement -> var_declare .)
    EQUALS          shift and go to state 58


state 20

    (22) statement -> var_assign .

    SEMICOLON       reduce using rule 22 (statement -> var_assign .)


state 21

    (8) if -> IF . LPAREN expression RPAREN LCURLY statements RCURLY elseif else

    LPAREN          shift and go to state 59


state 22

    (26) var_declare -> INTNAME . WORD

    WORD            shift and go to state 60


state 23

    (27) var_declare -> DOUBLENAME . WORD

    WORD            shift and go to state 61


state 24

    (28) var_declare -> CHARNAME . WORD

    WORD            shift and go to state 62


state 25

    (29) var_declare -> STRINGNAME . WORD

    WORD            shift and go to state 63


state 26

    (30) var_declare -> BOOLNAME . WORD

    WORD            shift and go to state 64


state 27

    (31) expression -> expression MULTIPLY . expression
    (23) expression -> . LPAREN expression RPAREN
    (31) expression -> . expression MULTIPLY expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression EXPONENT expression
    (36) expression -> . expression MODULUS expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . expression EQ expression
    (40) expression -> . expression NE expression
    (41) expression -> . expression LTE expression
    (42) expression -> . expression GTE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression LT expression
    (45) expression -> . PLUS expression
    (46) expression -> . MINUS expression
    (49) expression -> . NOT expression
    (50) expression -> . WORD
    (51) expression -> . INT
    (52) expression -> . DOUBLE
    (53) expression -> . CHAR
    (54) expression -> . STRING
    (55) expression -> . BOOL
    (56) expression -> . WORD DOT WORD

    LPAREN          shift and go to state 5
    PLUS            shift and go to state 6
    MINUS           shift and go to state 7
    NOT             shift and go to state 8
    WORD            shift and go to state 48
    INT             shift and go to state 10
    DOUBLE          shift and go to state 11
    CHAR            shift and go to state 12
    STRING          shift and go to state 13
    BOOL            shift and go to state 14

    expression                     shift and go to state 65

state 28
